"Atualizações e melhorias de legibilidade e nos testes de integração..."